# nas-toolbox

./: .gitmodules  Cargo.toml  README.md
backup/: Cargo.toml  backup-template.db
backup/src/: db.rs  main.rs
d2fn/: Cargo.toml  README.md
d2fn/src/: duplicate.rs  hash.rs  metadata.rs
d2fn/template/: report.html
src/: device.rs  duplicate.rs  hash.rs  inventory.rs  main.rs  metadata.rs
src/device/: status.rs  status_ex.rs
tape/: Cargo.toml  README.md  README_EN.md  build.rs  status_ex.example.xml
tape/src/: device.rs  err.rs  lib.rs  limit.rs  locate.rs  main.rs  operate.rs  status.rs  status_ex.rs
tape/src/device/: eot.rs  err.rs  limit.rs  locate.rs  operate.rs  status_ex.rs
template/: report.html
