[package]
name = "d2fn"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.72"
blake3 = "1.4.1"
clap = { version = "4.3.21", features = ["derive"] }
filewalker = { path = "../filewalker"}
time = { version = "0.3.21", features = ["local-offset"] }

[profile.release]
lto = "fat"
opt-level = 3
codegen-units = 1
strip = true
