[package]
name = "d2fn"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.72"
bincode = "2.0.0-rc.3"
blake3 = "1.4.1"
clap = { version = "4.3.21", features = ["derive"] }
filewalker = { git = "https://gitee.com/sunnysab/filewalker.git"}
serde = { version = "1.0.163", features = ["derive"] }
tera = { version = "1.19.0", default-features = false }
terminal_size = "0.2.6"
unicode-width = "0.1.10"

[profile.release]
lto = "fat"
opt-level = 3
codegen-units = 1
strip = true
