[package]
name = "tape-backup"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
libc = "0.2"
nix = { version = "0.26", default-features = false, features = ["ioctl", "fs"] }
strum = { version = "0.25", features = ["derive"] }
