[package]
name = "backup"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tape = { path = "../tape" }
filewalker = { path = "../filewalker" }

anyhow = "1.0"

rusqlite = { version = "0.29.0", features = ["bundled"] }
time = "0.3.21"