[package]
name = "tape"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "tape"
path = "src/lib.rs"
crate-type = ["lib"]


[dependencies]
anyhow = "1.0"
libc = "0.2"
nix = { version = "0.26", default-features = false, features = ["ioctl", "fs"] }
serde = { version = "1.0", features = ["derive"] }
serde-xml-rs = "0.6"
strum = { version = "0.25", features = ["derive"] }